--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -20,6 +20,18 @@ main section.categories-show {
       margin-top:    20px;
       // margin:        10px;
 
+      .sold {
+        position: absolute;
+        top: 0;
+        left: 0;
+        padding: 10px;
+        background-color: rgb(225, 166, 166);
+        color: #EEE;
+        border-bottom-right-radius: 20px;
+        border-top-left-radius: 4px;
+        font-size: 0.8em;
+      }
+
       header img {
         max-width: 100%;
         max-height: 140px;
