--- a/app/views/admin/dashboard/show.html.erb
+++ b/app/views/admin/dashboard/show.html.erb
@@ -1,4 +1,4 @@
 <%# <h1>Admin::Dashboard#show</h1>
 <p>Find me in app/views/admin/dashboard/show.html.erb</p> %>
 <h2>Dashboard</h2>
-<h4>There are <%= @products %>  <a href="/admin/products">products</a> and <%= @catagories %> categories</h4>
+<h4>There are <%= @products %>  <a href="/admin/products">products</a> and <%= @categories %> categories</h4>
